--- a/.github/workflows/studyriver-ja-feeds.yml
+++ b/.github/workflows/studyriver-ja-feeds.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           git config --local user.name  "actions-bot"
           git config --local user.email "actions@github.com"
+          git pull --rebase origin main
           if [ -n "$(git status --porcelain)" ]; then
             git add 05.NewsLetter/ja/*.md
             git commit -m "chore(newsletter): weekly feeds ($(date -u '+%Y-%m-%d'))"
