--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -25,10 +25,16 @@ jobs:
         run: |
           git config user.name  github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
+
+          # 差分があればコミット
           if git status --porcelain feeds | grep .; then
             git add feeds
             git commit -m "chore(feeds): update $(date +'%F')"
-            git push
+
+            # ★ ここが追加ポイント ★
+            git pull --rebase --autostash origin main
+
+            git push origin HEAD:main
           else
             echo "No changes."
           fi
